--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,18 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      id="root"
+      style="
+        height: 100% !important;
+        background: linear-gradient(
+          0deg,
+          rgba(175, 241, 218, 1) 0%,
+          rgba(249, 234, 143, 1) 100%
+        );
+        background-repeat: no-repeat;
+      "
+    ></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
